# visual_perception

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  data.npy  data_x2.npy  data_x3.npy  main.cpp
apps/: CMakeLists.txt
apps/assignment4/: CMakeLists.txt  assignment4.cpp  assignment4.h  main.cpp
apps/lab4/: CMakeLists.txt  main.cpp
cmake/: cpp_header.in  file.cmake
python/: load_mat_data.py  requirements.txt
src/: CMakeLists.txt  FundamentalMatrixEstimator.cpp  FundamentalMatrixEstimator.h  Types.h  fundamental_matrix_estimator.cpp  fundamental_matrix_estimator.h
src/io/numpy/: Array.h  ArraySerializer.h  ArrayTypes.h  NPZReader.cpp  NPZReader.h  Reader.cpp  Reader.h  StrArray.h  array.h  array_io.h  array_types.h  npz_reader.cpp  npz_reader.h  reader.cpp  reader.h  str_array.h
src/utils/: enumerate.h  utils.h
src/vp/: essential_matrix_estimator.cpp  essential_matrix_estimator.h  fundamental_matrix_estimator.cpp  fundamental_matrix_estimator.h  pnp_algorithm.cpp  pnp_algorithm.h  point_triangulator.cpp  point_triangulator.h  scene.cpp  scene.h  types.cpp  types.h  view.cpp  view.h
src/vp/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  test_base.cpp  test_base.h
tests/fixtures/vp/: essential_matrix_estimator_test.cpp  fundamental_matrix_estimator_test.cpp  pnp_algorithm_test.cpp  point_triangulator_test.cpp
tests/resources/: data_C.npy  data_K.npy  data_R.npy  data_img1.npy  data_img2.npy  data_img3.npy
tests/vp/: essential_matrix_estimator_test.cpp  essential_matrix_estimator_test.h  fundamental_matrix_estimator_test.h  pnp_algorithm_test.cpp  pnp_algorithm_test.h  point_triangulator_test.h
